tests/fixtures/invalid/bad_indent.etcm
spec BadIndent:
  ok: int
    bad: int
